--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <title>axie_world</title>
 <link rel=stylesheet href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
 <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css>
-<link href=/PeteBoi08.github.io/js/about.d1ab72e7.js rel=prefetch>
-<link href=/PeteBoi08.github.io/css/chunk-vendors.e559b8a7.css rel=preload as=style>
-<link href=/PeteBoi08.github.io/js/app.ea3e82b5.js rel=preload as=script>
-<link href=/PeteBoi08.github.io/js/chunk-vendors.ca55620a.js rel=preload as=script>
-<link href=/PeteBoi08.github.io/css/chunk-vendors.e559b8a7.css rel=stylesheet>
+<link href="/PeteBoi08.github.io/js/about.d1ab72e7.js" rel=prefetch>
+<link href="/PeteBoi08.github.io/css/chunk-vendors.e559b8a7.css" rel=preload as=style>
+<link href="/PeteBoi08.github.io/js/app.ea3e82b5.js rel=preload" as=script>
+<link href="/PeteBoi08.github.io/js/chunk-vendors.ca55620a.js" rel=preload as=script>
+<link href="/PeteBoi08.github.io/css/chunk-vendors.e559b8a7.css" rel=stylesheet>
 </head>
 <body>
 <noscript>
@@ -21,7 +21,7 @@
 </noscript>
 <div id=app>
 </div>
-<script src=/PeteBoi08.github.io/js/chunk-vendors.ca55620a.js type="text/javascript"></script>
-<script src=/PeteBoi08.github.io/js/app.ea3e82b5.js type="text/javascript"></script>
+<script src="/PeteBoi08.github.io/js/chunk-vendors.ca55620a.js" type="text/javascript"></script>
+<script src="/PeteBoi08.github.io/js/app.ea3e82b5.js" type="text/javascript"></script>
 </body>
 </html>
