--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link rel=stylesheet href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
 <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css>
 <link href=/PeteBoi08.github.io/js/about.d1ab72e7.js rel=prefetch type='text/html'>
-<link href=/PeteBoi08.github.io/css/chunk-vendors.e559b8a7.css rel=preload as=style type='text/html'>
+<link href=/PeteBoi08.github.io/css/chunk-vendors.e559b8a7.css rel=stylesheet as=style type='text/html'>
 <link href=/PeteBoi08.github.io/js/app.2f48265d.js rel=preload as=script type='text/html'>
 <link href=/PeteBoi08.github.io/js/chunk-vendors.fe28f797.js rel=preload as=script type='text/html'>
 <link href=/PeteBoi08.github.io/css/chunk-vendors.e559b8a7.css rel=stylesheet type='text/html'>
