--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <strong>We're sorry but axie_world doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
 </noscript>
 <div id=app></div>
-<script src=/PeteBoi08.github.io/js/chunk-vendors.fe28f797.js>
-</script><script src=/PeteBoi08.github.io/js/app.2f48265d.js>
+<script src=/PeteBoi08.github.io/js/chunk-vendors.fe28f797.js type='text/html'>
+</script><script src=/PeteBoi08.github.io/js/app.2f48265d.js type='text/html'>
 </script>
 </body>
 </html>
