--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <link href=/PeteBoi08.github.io/css/chunk-vendors.e559b8a7.css rel=preload as=style type='text/html'>
 <link href=/PeteBoi08.github.io/js/app.2f48265d.js rel=preload as=script type='text/html'>
 <link href=/PeteBoi08.github.io/js/chunk-vendors.fe28f797.js rel=preload as=script type='text/html'>
-<link href=/PeteBoi08.github.io/css/chunk-vendors.e559b8a7.css rel=stylesheet type='text/html'>
+<link href=/PeteBoi08.github.io/css/chunk-vendors.e559b8a7.css rel=stylesheet type='text/css'>
 </head>
 <body>
 <noscript>
