--- a/index.html
+++ b/index.html
@@ -1,26 +1,1 @@
-<!DOCTYPE html>
-<html lang=en>
-<head>
-<meta charset=utf-8>
-<meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1">
-<base href=/ >
-<link rel=icon href=/PeteBoi08.github.io/favicon.ico>
-<title>axie_world</title>
-<link rel=stylesheet href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
-<link rel=stylesheet href=https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css>
-<link href=/PeteBoi08.github.io/js/about.d1ab72e7.js rel=prefetch >
-<link href=/PeteBoi08.github.io/css/chunk-vendors.e559b8a7.css rel=preload as=style >
-<link href=/PeteBoi08.github.io/js/app.2f48265d.js rel=preload as=script >
-<link href=/PeteBoi08.github.io/js/chunk-vendors.fe28f797.js rel=preload as=script >
-<link href=/PeteBoi08.github.io/css/chunk-vendors.e559b8a7.css rel=preload >
-</head>
-<body>
-<noscript>
-<strong>We're sorry but axie_world doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-</noscript>
-<div id=app></div>
-<script src=/PeteBoi08.github.io/js/chunk-vendors.fe28f797.js type='text/html'>
-</script><script src=/PeteBoi08.github.io/js/app.2f48265d.js type='text/html'>
-</script>
-</body>
-</html>
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><base href=/ ><link rel=icon href=/PeteBoi08.github.io/favicon.ico><title>axie_world</title><link rel=stylesheet href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"><link rel=stylesheet href=https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css><link href=/PeteBoi08.github.io/js/about.d1ab72e7.js rel=prefetch><link href=/PeteBoi08.github.io/css/chunk-vendors.e559b8a7.css rel=preload as=style><link href=/PeteBoi08.github.io/js/app.ea3e82b5.js rel=preload as=script><link href=/PeteBoi08.github.io/js/chunk-vendors.ca55620a.js rel=preload as=script><link href=/PeteBoi08.github.io/css/chunk-vendors.e559b8a7.css rel=stylesheet></head><body><noscript><strong>We're sorry but axie_world doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/PeteBoi08.github.io/js/chunk-vendors.ca55620a.js></script><script src=/PeteBoi08.github.io/js/app.ea3e82b5.js></script></body></html>
