--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </noscript>
     <div id=app>
     </div>
-    <script src=/PeteBoi08.github.io/js/chunk-vendors.ca55620a.js></script>
-    <script src=/PeteBoi08.github.io/js/app.ea3e82b5.js></script>
+    <script src=/PeteBoi08.github.io/js/chunk-vendors.ca55620a.js type="application/javascript"></script>
+    <script src=/PeteBoi08.github.io/js/app.ea3e82b5.js type="application/javascript"></script>
   </body>
 </html>
