--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <link rel=icon href="./PeteBoi08.github.io/favicon.ico"> 
     <link rel=stylesheet href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" type="text/css">
     <link rel=stylesheet href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css" type="text/css">
-    <link href="./PeteBoi08.github.io/js/about.d1ab72e7.js" rel=prefetch>
-    <link href="./PeteBoi08.github.io/css/chunk-vendors.e559b8a7.css" rel=preload as=style type="text/css">
-    <link href="./PeteBoi08.github.io/js/app.ea3e82b5.js" rel=preload as=script>
-    <link href="./PeteBoi08.github.io/js/chunk-vendors.ca55620a.js" rel=preload as=script>
-    <link href="./PeteBoi08.github.io/css/chunk-vendors.e559b8a7.css" rel=stylesheet type="text/css">
+    <link href="/PeteBoi08.github.io/js/about.d1ab72e7.js" rel=prefetch>
+    <link href="/PeteBoi08.github.io/css/chunk-vendors.e559b8a7.css" rel=preload as=style type="text/css">
+    <link href="/PeteBoi08.github.io/js/app.ea3e82b5.js" rel=preload as=script>
+    <link href="/PeteBoi08.github.io/js/chunk-vendors.ca55620a.js" rel=preload as=script>
+    <link href="/PeteBoi08.github.io/css/chunk-vendors.e559b8a7.css" rel=stylesheet type="text/css">
   </head>
   <body>
     <noscript>
